# pomiyka-bot

./: .dockerignore  .env.emergency  .env.example  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_VERSION_UPDATE_REPORT.md  ASYNC_REFACTORING_COMPLETION_REPORT.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTEXT_FIX_DOCUMENTATION.md  CONTEXT_FIX_FINAL_REPORT.md  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  EMERGENCY_FIX_REPORT.md  ENHANCED_DIALOGUE_v3.3_REPORT.md  FINAL_ASYNC_COMPLETION_REPORT.md  FINAL_AUDIT_COMPLETION_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_COMPLETION_SUMMARY.md  FINAL_IMPROVEMENTS_REPORT_v3.0.md  FINAL_OPTIMIZATION_PLAN.md  FINAL_REPORT_SITUATION_PREDICTION.md  GEMINI_CONTEXT_ENHANCEMENT_REPORT.md  GEMINI_ENHANCED_INTEGRATION.md  GEMINI_INTEGRATION_COMPLETION_REPORT.md  IMPROVEMENTS_REPORT_v2.9.md  IMPROVEMENTS_SITUATION_PREDICTION.md  IMPROVEMENTS_SUMMARY_v3.0.md  LIMITS_REDUCTION_REPORT.md  LOCAL_ANALYZER_INTEGRATION.md  MISSION_ACCOMPLISHED.md  Makefile  PERSONALITY_FIX_REPORT.md  PERSONALITY_IMPROVEMENTS_REPORT.md  PHASE_1_IMPLEMENTATION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  (+71 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specstory/history/: 2025-06-26_16-18-такс,-мені-треба-створити-бота-для-групового-чату.md  2025-06-26_16-18Z-такс,-мені-треба-створити-бота-для-групового-чату.md  2025-06-26_19-35-він-пише-звичайні-повідомлення-час-від-часу-не-у.md  2025-06-26_19-35Z-він-пише-звичайні-повідомлення-час-від-часу-не-у.md  2025-06-26_20-12-як-можна-передбачити-такі-ситуації-як-на-скріні.md  2025-06-26_20-12Z-як-можна-передбачити-такі-ситуації-як-на-скріні.md  2025-06-26_20-49-надто-шизанутий-виправляй.md  2025-06-26_20-49Z-надто-шизанутий-виправляй.md  2025-06-26_21-10-importing-chat-history-from-telegram-to-bot.md  2025-06-26_21-10Z-importing-chat-history-from-telegram-to-bot.md  2025-06-27_15-13Z-resolving-merge-conflicts-in-python-code.md  2025-06-27_17-34Z-такс,-проаналізуй-усю-кодбазу.md  2025-06-27_19-44Z-він-фокусується-на-занадто-дивних-словах-і-дуже-ча.md  2025-06-27_19-59Z-покращи-обробку-контексту-чату-(якщо-в-чаті-спам,.md  2025-06-27_21-44Z-#codebase-треба-скоригувати-його-інструкці-він-з.md  2025-06-28_08-54Z-розмовні-патерни-та-їх-визначення-виглядає-дуже-пр.md  2025-06-28_09-12Z-externally-managed-environment-error-in-python-installation.md  2025-06-28_09-33Z-connecting-to-docker-container-logs.md  2025-06-28_11-36Z-codebase-improvement-plan-and-recommendations.md  2025-06-28_11-51Z-проглянь-і-запропонуй-іще-покращення-думай-покрок.md  2025-06-28_15-52Z-фінально-продивися-увесь-#codebase-на-можливі-ню.md  2025-06-28_18-24Z-глянь-які-зараз-ліміти-(троттлінг)-стоять-детальн.md  2025-06-28_19-43Z-gemini-api-message-format-details.md
bot/: bot_config.py  main.py  main_emergency.py
bot/modules/: advanced_backup.py  analytics_engine.py  (+35 more)
tests/: test_integration_phase1.py
